web/src/shared/components/FeaturedEvents/style.scss
.dots-group {
  span {
    a {
      opacity: 0;
    }
  }
}

.item-wrapper h3{
  word-break: break-all;
}
.item-wrapper .venue-name{
  word-break: break-all;
}
.featured-event-date {
    min-height: 40px;
    max-height: 40px;
  }
  .featured-wrapper{
    display: flex;
    align-items: center;
  }
  .featured-wrapper a{
    margin-right: 10px;
    flex: 1 0 42%;
    max-width: 42%;
  }
  @media(max-width: 767px){
    .featured-wrapper {
      align-items: flex-start;
      -ms-overflow-style: none; // IE 10+ 
      scrollbar-width: none; // Firefox
      padding-bottom: 25px;
      &::-webkit-scrollbar { 
        display: none; // Safari and Chrome 
      }
      h3{
        text-overflow: ellipsis;        
        overflow: hidden;
        line-height: 18px;
        white-space: normal;        
        /* autoprefixer: off */ -webkit-box-orient: vertical; /* autoprefixer: on */ 
        display: block; 
        display: -webkit-box; 
        -webkit-line-clamp: 2;        
        white-space: normal;
        max-height: 40px;
        height: 40px;
        @media(max-width: 767px){
          max-height: 36px;
          height: 36px;
        }
      }
      .featured-item-img{
        .category{
          margin-bottom: 10px;
          &:empty{
            display: flex !important;
            background: transparent;
          }
        }
      }
      .item-img{
        margin-bottom: 10px;
        
      }
      .featured-event-date{
        word-break: break-word;
        white-space: normal;
        @media(max-width: 767px) {
            margin-bottom: 5px;
        }
      }
      .venue-name{
        white-space: nowrap;
        overflow: hidden;
        text-overflow: ellipsis;
        color: #626262;
      }
    }
  }

